--- a/layouts/partials/home/project-info.html
+++ b/layouts/partials/home/project-info.html
@@ -17,16 +17,18 @@
         <p class="title is-size-4 is-size-5-mobile">
           
         </p>
-        <div class="container">
-          <img src="/img/logos/profile-pic-3.png" alt="Avatar" style="width:90px">
-          <iconify-icon icon="skill-icons:linkedin"> </iconify-icon> 
-          <iconify-icon icon="skill-icons:twitter"></iconify-icon>
-          <iconify-icon icon="skill-icons:github-dark"></iconify-icon>
-          <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-          <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-          <p><span>Sangam Biradar </span> | Principal Security Advocate @Deepfence.io </p>
-          <p>Docker Community Leader @DockerCon2020 Award Winner </p>
-        </div>
+      
+        <div class="card" style="width: 18rem;">
+          <img src="img/logos/Profile Pic.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sangam Biradar</h5>
+            <a href="https://twitter.com/sangamtwts?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @sangamtwts</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>          </div>
+        <!-- Place this tag where you want the button to render. -->
+        <!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<a class="github-button" href="https://github.com/sangam14" data-size="large" aria-label="Follow @sangam14 on GitHub">Follow @sangam14</a>
+          </div>
+        
         
       
       </div>
