new-sandbox-feature

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -61,7 +61,9 @@
                     <!-- End mobile menu toggle-->
                 </div>
             </div>
-
+            <script src="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.js"></script>
+            <link rel="stylesheet" href="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.css" />
+            <script src="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.js"></script>
         </div>
     </div><!--end container-->
 </header><!--end header-->
