update-hello-world

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -63,7 +63,9 @@
             </div>
             <script src="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.js"></script>
             <link rel="stylesheet" href="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.css" />
-            <script src="https://unpkg.com/@antonz/codapi@0.12.0/dist/snippet.js"></script>
+            <script src="https://unpkg.com/@antonz/runno@0.6.1/dist/runno.js"></script>
+<script src="https://unpkg.com/@antonz/codapi@0.12.0/dist/engine/wasi.js"></script>
+
         </div>
     </div><!--end container-->
 </header><!--end header-->
